Agent query: Can you check if: 1) The report page loads correctly now 2) The check-in time is displayed properly in HH:MM format 3) All vehicle icons are showing up correctly?
Fix: Correct time formatting in report and handle UndefinedError in Jinja2 template.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/832f2abc-4378-444e-b826-5fcb9ec6f866/57c0056b-d9b5-4ff8-b3ad-ba8323393dfb.jpg

--- a/templates/report.html
+++ b/templates/report.html
@@ -57,11 +57,11 @@
                             {% for vehicle in vehicles %}
                             <tr>
                                 <td class="text-capitalize">
-                                    <i class="fas fa-{% if vehicle.type == 'motorcycle' %}motorcycle{% elif vehicle.type == 'bajaj' %}taxi{% else %}car{% endif %} me-2"></i>
-                                    {{ vehicle.type }}
+                                    <i class="fas fa-{% if vehicle.vehicle_type == 'motorcycle' %}motorcycle{% elif vehicle.vehicle_type == 'bajaj' %}taxi{% else %}car{% endif %} me-2"></i>
+                                    {{ vehicle.vehicle_type }}
                                 </td>
                                 <td class="plate-number">{{ vehicle.plate_number }}</td>
-                                <td>{{ vehicle.check_in_time.split('T')[1][:5] }}</td>
+                                <td>{{ vehicle.check_in_time.strftime('%H:%M') }}</td>
                                 <td>
                                     <span class="badge bg-info">Active</span>
                                 </td>
