Agent query: Can you check if the report page is now showing the correct time in East African Time (EAT) format? The time should be UTC+3.
Adjust check-in time display to East African Time (EAT) in reports and models.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/832f2abc-4378-444e-b826-5fcb9ec6f866/4c86a4ad-0196-45ff-9d42-05befa424f0e.jpg

--- a/templates/report.html
+++ b/templates/report.html
@@ -49,7 +49,7 @@
                             <tr>
                                 <th>Vehicle Type</th>
                                 <th>Plate Number</th>
-                                <th>Check-in Time</th>
+                                <th>Check-in Time (EAT)</th>
                                 <th>Duration</th>
                             </tr>
                         </thead>
@@ -61,7 +61,7 @@
                                     {{ vehicle.vehicle_type }}
                                 </td>
                                 <td class="plate-number">{{ vehicle.plate_number }}</td>
-                                <td>{{ vehicle.check_in_time.strftime('%H:%M') }}</td>
+                                <td>{{ vehicle.formatted_check_in_time() }}</td>
                                 <td>
                                     <span class="badge bg-info">Active</span>
                                 </td>
