Agent query: Can you check if the check-in form now includes all the new fields (driver name, ID, phone, etc.) and if the report page displays this information correctly?
Enhance parking system with driver and vehicle details.  Added fields for driver information (name, ID, phone, address), vehicle color, and improved check-in/out time formatting.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/832f2abc-4378-444e-b826-5fcb9ec6f866/69a94ad6-e9b6-4f39-9068-d66fd3451ad2.jpg

--- a/templates/report.html
+++ b/templates/report.html
@@ -47,20 +47,29 @@
                     <table class="table table-hover">
                         <thead>
                             <tr>
-                                <th>Vehicle Type</th>
-                                <th>Plate Number</th>
+                                <th>Vehicle Information</th>
+                                <th>Driver Information</th>
                                 <th>Check-in Time (EAT)</th>
-                                <th>Duration</th>
+                                <th>Status</th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for vehicle in vehicles %}
                             <tr>
-                                <td class="text-capitalize">
+                                <td>
                                     <i class="fas fa-{% if vehicle.vehicle_type == 'motorcycle' %}motorcycle{% elif vehicle.vehicle_type == 'bajaj' %}taxi{% else %}car{% endif %} me-2"></i>
-                                    {{ vehicle.vehicle_type }}
+                                    <span class="text-capitalize">{{ vehicle.vehicle_type }}</span><br>
+                                    <strong class="plate-number">{{ vehicle.plate_number }}</strong><br>
+                                    Color: {{ vehicle.vehicle_color }}
                                 </td>
-                                <td class="plate-number">{{ vehicle.plate_number }}</td>
+                                <td>
+                                    {{ vehicle.driver_name }}<br>
+                                    <small class="text-muted">
+                                        {{ vehicle.driver_id_type.replace('_', ' ').title() }}: {{ vehicle.driver_id_number }}<br>
+                                        Phone: {{ vehicle.driver_phone }}<br>
+                                        Address: {{ vehicle.driver_residence }}
+                                    </small>
+                                </td>
                                 <td>{{ vehicle.formatted_check_in_time() }}</td>
                                 <td>
                                     <span class="badge bg-info">Active</span>
