--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
                         <label for="driver_id_type" class="form-label">ID Type</label>
                         <select class="form-select" id="driver_id_type" name="driver_id_type" required>
                             <option value="national_id">National ID</option>
+                            <option value="voters_id">Voter's ID</option>
                             <option value="passport">Passport</option>
                             <option value="drivers_license">Driver's License</option>
                         </select>
