Agent query: Can you check if the vehicle model is now displayed correctly under the vehicle information section in the Currently Parked Vehicles table on the report page?
Add vehicle model to currently parked vehicles report.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/832f2abc-4378-444e-b826-5fcb9ec6f866/41a1fb02-f791-403c-b463-d8a8eced69e6.jpg

--- a/templates/report.html
+++ b/templates/report.html
@@ -60,6 +60,7 @@
                                     <i class="fas fa-{% if vehicle.vehicle_type == 'motorcycle' %}motorcycle{% elif vehicle.vehicle_type == 'bajaj' %}taxi{% else %}car{% endif %} me-2"></i>
                                     <span class="text-capitalize">{{ vehicle.vehicle_type }}</span><br>
                                     <strong class="plate-number">{{ vehicle.plate_number }}</strong><br>
+                                    Model: {{ vehicle.vehicle_model }}<br>
                                     Color: {{ vehicle.vehicle_color }}
                                 </td>
                                 <td>
