--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('analytics') }}">Analytics</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('report') }}">Report</a>
                     </li>
                 </ul>
@@ -54,5 +57,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{ url_for('static', filename='js/parking.js') }}"></script>
+    {% block scripts %}{% endblock %}
 </body>
 </html>
