--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -24,7 +24,7 @@
     <div class="col-md-6">
         <div class="card h-100">
             <div class="card-header">
-                <h3 class="card-title mb-0">Vehicle Type Distribution</h3>
+                <h3 class="card-title mb-0">Current Vehicle Distribution</h3>
             </div>
             <div class="card-body">
                 <canvas id="distributionChart"></canvas>
@@ -36,7 +36,7 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title mb-0">Hourly Check-ins (Last 24 Hours)</h3>
+                <h3 class="card-title mb-0">Hourly Check-ins</h3>
             </div>
             <div class="card-body">
                 <canvas id="checkinsChart"></canvas>
@@ -99,7 +99,10 @@ document.addEventListener('DOMContentLoaded', function() {
             responsive: true,
             scales: {
                 y: {
-                    beginAtZero: true
+                    beginAtZero: true,
+                    ticks: {
+                        stepSize: 1
+                    }
                 }
             }
         }
