--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin_dashboard') }}">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin_spaces') }}">Manage Spaces</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin_logout') }}">Logout</a>
+                    </li>
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
@@ -29,6 +40,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('report') }}">Report</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
