--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('report') }}">Report</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin_login') }}">Admin Login</a>
+                    </li>
                     {% endif %}
                 </ul>
             </div>
