--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
                             <a class="nav-link" href="{{ url_for('admin_dashboard') }}">Admin Dashboard</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('manage_users') }}">Manage Users</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin_spaces') }}">Manage Spaces</a>
                         </li>
                         {% else %}
