--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -5,22 +5,24 @@
     <div class="col-md-6 col-lg-4">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title mb-0">Login</h3>
+                <h3 class="card-title mb-0">Ingia (Login)</h3>
             </div>
             <div class="card-body">
                 <form method="POST" action="{{ url_for('login') }}">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" class="form-control" id="username" name="username" 
+                               placeholder="Andika jina lako la kutumia" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" class="form-control" id="password" name="password" 
+                               placeholder="Andika neno la siri" required>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Login</button>
+                    <button type="submit" class="btn btn-primary w-100">Ingia (Login)</button>
                 </form>
                 <div class="text-center mt-3">
-                    <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
+                    <p>Huna akaunti? <a href="{{ url_for('register') }}">Jisajili hapa</a></p>
                 </div>
             </div>
         </div>
