--- a/templates/landing.html
+++ b/templates/landing.html
@@ -92,8 +92,8 @@
         <div class="col-12 text-center">
             <h2>Visit Us</h2>
             <p class="lead">Located in the heart of the city</p>
-            <p><i class="fas fa-map-marker-alt me-2"></i>123 City Center, Chino Street</p>
-            <p><i class="fas fa-phone me-2"></i>+255 123 456 789</p>
+            <p><i class="fas fa-map-marker-alt me-2"></i>Mringo Road, Golani Kijiweni</p>
+            <p><i class="fas fa-phone me-2"></i>+255 754 402 368</p>
             <p><i class="fas fa-envelope me-2"></i>info@chinopark.com</p>
         </div>
     </div>
